# personal-chess-tutor

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  RESTRUCTURE_PLAN.md  restructure-plan.html  security_best_practices_report.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_main.cpp  index.html  targets.json
chess-analysis-frontend-north-star/: MANIFEST.md  README.md  SHA256SUMS.txt
chess-analysis-frontend-north-star/ground-truth/: ANALYSIS_VISUAL_SPEC.md  CODEX_FRONTEND_REBUILD_PROMPT.md  CODEX_VISUAL_REPAIR_PROMPT.md  FRONTEND_NORTH_STAR.md  VISUAL_ACCEPTANCE_CHECKLIST.md
demo/: sample-game.pgn
design/: design-system.md
docs/: api.md  architecture.md  personal_chess_tutor_prd.md  phase_1_trustworthy_game_analyzer.md  phase_2_personalized_training_system.md  phase_3_scale_hardening_and_portfolio_release.md
ground-truth/: 00-READ-FIRST.md  ANALYSIS_WORKSTATION.md  AUDIT_REPORT.md  CHESSCOM_INTEGRATION.md  COACHING_STYLES.md  CODEX_MASTER_PROMPT.md  COMPONENT_SPEC.md  CPP_RUNTIME.md  DESIGN_SYSTEM.md  ENGINEERING_RULES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  LOCAL_AI_FUTURE.md  MIGRATION_REPORT.md  MOVE_CLASSIFICATION.md  PATTERN_INTELLIGENCE.md  PLAYER_MODEL.md  PRODUCT_VISION.md  REDESIGN_PLAN.md  REFERENCES.md  REPOSITORY_MIGRATION.md  REVIEW_FINDINGS.md  SYSTEM_ARCHITECTURE.md  UX_ARCHITECTURE.md  VARIATION_EXPLORER.md  VISUAL_QA.md
packaging/macos/: Info.plist  index.html  launcher  package.sh  pct-data
release/: architecture.html  benchmarks.html  corpus.html  decisions.html  demo.html  index.html  package-receipt.json  profiling.html  protocol.html  recruiter-summary.html  security.html  storage.html  style.css  technical-writeup.html  traceability.html
release/benchmarks/: m2pro-arm64.json
resources/: catalog.json  openings.json  tactical-corpus.json
scripts/: check-release-links.js  clean-install-smoke.sh  demo.sh  import-lichess-puzzles.js  profile-benchmarks.sh  race-check.sh  real-stockfish-smoke.sh  security-check.sh  xctrace-flamegraph.js
src/: cli.cpp  main.cpp
src/analysis/: analyzer.cpp  opening_book.cpp
src/app/: ingest_manager.cpp  job_manager.cpp  repository.cpp
src/chess/: bitboard.cpp  board.cpp  fen.cpp  pgn.cpp  san.cpp
src/common/: json.cpp
src/engine/: pool.cpp  stockfish.cpp
tests/: analysis_tests.cpp  api_tests.cpp  bitboard_tests.cpp  chess_tests.cpp  chesscom_api_tests.cpp  corpus_tests.cpp  crash_stockfish.cpp  engine_tests.cpp  fake_stockfish.cpp  import_tests.cpp  ingest_manager_tests.cpp  job_tests.cpp  json_tests.cpp  pgn_tests.cpp  phase2_e2e_tests.cpp  phase3_e2e_tests.cpp  pool_tests.cpp  repository_tests.cpp  slow_stockfish.cpp  storage_tests.cpp  test.hpp  test_main.cpp  training_tests.cpp
web/: index.html  package-lock.json  package.json  tsconfig.json
(+44 files in other folders)
